[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
strict = true
# TODO: remove these strict loosenings when possible
allow_incomplete_defs = true
allow_untyped_defs = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_calls = false
